[gd_scene load_steps=9 format=3 uid="uid://bdol5wggxteul"]

[ext_resource type="FontFile" uid="uid://t6tpeuhov8xb" path="res://fonts/Jost-800-Heavy.ttf" id="1_7u21k"]
[ext_resource type="Script" path="res://title/title.gd" id="1_vnel8"]
[ext_resource type="FontFile" uid="uid://3bakknuabxrn" path="res://fonts/Jost-500-Medium.ttf" id="2_avlu2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhcvy"]
bg_color = Color(0.1904, 0.52304, 0.56, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tujvl"]
bg_color = Color(0.192157, 0.521569, 0.560784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbddu"]
bg_color = Color(0.192157, 0.521569, 0.560784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_khm8l"]
bg_color = Color(0.192157, 0.521569, 0.560784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vsni"]
bg_color = Color(0.0235294, 0.172549, 0.239216, 1)

[node name="Title" type="CanvasLayer"]
script = ExtResource("1_vnel8")

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.025
anchor_top = -0.05
anchor_right = 0.025
anchor_bottom = -0.05
offset_left = 244.0
offset_top = 8.0
offset_right = 972.0
offset_bottom = 286.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_7u21k")
theme_override_font_sizes/font_size = 192
text = "PONG+"
horizontal_alignment = 1

[node name="TaglineLabel" type="Label" parent="."]
offset_left = 388.0
offset_top = 203.0
offset_right = 892.0
offset_bottom = 273.0
theme_override_fonts/font = ExtResource("2_avlu2")
theme_override_font_sizes/font_size = 48
text = "Same Pong. More balls."
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="."]
offset_left = 1200.0
offset_top = 592.0
offset_right = 1272.0
offset_bottom = 639.0
theme_override_fonts/font = ExtResource("1_7u21k")
theme_override_font_sizes/font_size = 32
text = "vX.X"

[node name="SinglePlayerButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 312.0
offset_right = 800.0
offset_bottom = 370.0
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../MultiPlayerButton")
theme_override_fonts/font = ExtResource("2_avlu2")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_nhcvy")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_tujvl")
theme_override_styles/hover = SubResource("StyleBoxFlat_nbddu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_khm8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vsni")
disabled = true
text = "1 PLAYER"
icon_alignment = 1

[node name="MultiPlayerButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 384.0
offset_right = 800.0
offset_bottom = 442.0
focus_neighbor_top = NodePath("../SinglePlayerButton")
focus_neighbor_bottom = NodePath("../HelpButton")
theme_override_fonts/font = ExtResource("2_avlu2")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_nhcvy")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_tujvl")
theme_override_styles/hover = SubResource("StyleBoxFlat_nbddu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_khm8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vsni")
text = "2 PLAYER"
icon_alignment = 1

[node name="HelpButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 456.0
offset_right = 800.0
offset_bottom = 514.0
focus_neighbor_top = NodePath("../MultiPlayerButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
theme_override_fonts/font = ExtResource("2_avlu2")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_nhcvy")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_tujvl")
theme_override_styles/hover = SubResource("StyleBoxFlat_nbddu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_khm8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vsni")
text = "HOW TO PLAY"
icon_alignment = 1

[node name="CreditsButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 528.0
offset_right = 800.0
offset_bottom = 586.0
focus_neighbor_top = NodePath("../HelpButton")
focus_neighbor_bottom = NodePath("../SinglePlayerButton")
theme_override_fonts/font = ExtResource("2_avlu2")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_nhcvy")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_tujvl")
theme_override_styles/hover = SubResource("StyleBoxFlat_nbddu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_khm8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vsni")
text = "CREDITS
"
icon_alignment = 1

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="MultiPlayerButton" to="." method="_on_multi_player_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
